--- a/main.html
+++ b/main.html
@@ -3,12 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
+     <title>Nested Tables Layout</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+      <!-- Your code here --><!-- Main Table -->
+        <tr>
+            <td>
+                <table>
+                    <tr>
+                        <th colspan="2">Nested Table 1</th>
+                    </tr>
+                    <tr>
+                        <td>Row 1, Column 1</td>
+                        <td>Row 1, Column 2</td>
+                    </tr>
+                    <tr>
+                        <td>Row 2, Column 1</td>
+                        <td class="black-cell">HTML</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <th colspan="2">Nested Table 2</th>
+                    </tr>
+                    <tr>
+                        <th>Column 1</th>
+                        <th>Column 2</th>
+                    </tr>
+                    <tr>
+                        <td>Data 1</td>
+                        <td>Data 2</td>
+                    </tr>
+                    <tr>
+                        <td>Data 3</td>
+                        <td>Data 4</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <table>
+                    <tr>
+                        <th>Nested Table 3</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>List item 1</li>
+                                <li>List item 2</li>
+                                <li>List item 3</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <th>Nested Table 4</th>
+                    </tr>
+                    <tr>
+                        <td>Content 1</td>
+                    </tr>
+                    <tr>
+                        <td>Content 2</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
     </table>
   </body>
 </html>
