--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
       <!-- Your code here --><!-- Main Table -->
         <tr>
             <td>
+                <!-- Nested Table 1 -->
                 <table>
                     <tr>
                         <th colspan="2">Nested Table 1</th>
@@ -26,6 +27,7 @@
                 </table>
             </td>
             <td>
+                <!-- Nested Table 2 -->
                 <table>
                     <tr>
                         <th colspan="2">Nested Table 2</th>
@@ -47,6 +49,7 @@
         </tr>
         <tr>
             <td>
+                <!-- Nested Table 3 -->
                 <table>
                     <tr>
                         <th>Nested Table 3</th>
@@ -63,6 +66,7 @@
                 </table>
             </td>
             <td>
+                <!-- Nested Table 4 -->
                 <table>
                     <tr>
                         <th>Nested Table 4</th>
